--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,7 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <a href="../shopping-list.html" class="nav-link">Shopping list</a>
       </li>
     </ul>
   </nav>
