add popUp.html to index.html

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pop up</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <button id="modalBtn" class="button">Click here</button>
+<button id="modalBtn" class="button">Click here</button>
 
     <div id="popUp" class="modal">
         <div class="modal-content">
-            <span class="closeBtn">&times</span>
+            <span class="closeBtn">&times;</span>
             <p>Information about book</p>
             <button type="submit">ADD TO SHOPPING LIST</button>
         </div>        
     </div>
-    <script src="./script.js"></script>
-</body>
-</html>
