--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import url('./reset.css');
 @import url('./header.css');
-
+@import url('./pop-up.css');
 :root {
   --main-cl: #4f2ee8;
   --text-cl: #111111;
