--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,19 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="../shopping-list.html" class="nav-link">Shopping list</a>
+        <a href="../index.html" class="nav-link">Logo</a>
+      </li> 
+      <li class="nav-item">
+        <a href="../index.html" class="nav-link">HOME</a>
       </li>
+      <li class="nav-item">
+        <a href="../shopping-list.html" class="nav-link">SHOPPING LIST</a>
+      </li>
+
     </ul>
+    <label class="switch">
+      <input type="checkbox" id="themeToggle">
+      <span class="slider round"></span>
+  </label>
   </nav>
 </header>
