--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,17 +1,36 @@
 .header {
-  padding: 20px 0;
-}
-.nav-list{
   display: flex;
+  padding: 14px 24px;
+  border-radius: 0px 0px 8px 8px;
+  border: 1.5px solid #111;
 }
 
+.nav-list {
+  display: inline-flex;
+  align-items: center;
+  gap: 24px;
+  margin-left: 76px;
 
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+}
+.nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
 
 .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
+  margin-left: auto;
 }
 
 .switch input {
@@ -20,7 +39,6 @@
   height: 0;
 }
 
-
 .slider {
   position: absolute;
   cursor: pointer;
@@ -28,22 +46,22 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, #4F2EE8, #DCDCDC);
-  -webkit-transition: .4s;
-  transition: .4s;
+  background: linear-gradient(to bottom, #4f2ee8, #dcdcdc);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 20px;
 }
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 26px;
   width: 26px;
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 20px;
 }
 
