--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -5,7 +5,6 @@
     font-weight: 700;
     line-height: 1.08;
     letter-spacing: -1.28px;
-    margin-top: 40px;
     margin-left: 20px;
     margin-bottom: 40px;
 }
@@ -30,23 +29,101 @@
 
 .shopping-list-book-card {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.shopping-list-book-card {
-    width: 996px;
-    height: 213px;
-    padding: 30px 24px;
-    border-radius: 16px;
+    justify-content: flex-start;
+    align-items: flex-start;
     border: 2px solid rgba(79, 46, 232, 0.40);
     background: #FFF;
+    border-radius: 16px;
+    width: 100%;   
+    max-width: 335px;
+    height: 170px;
+    letter-spacing: -1.28px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 30px 24px;
+    position: relative;
 }
 
-.shopping-list-book-card img {
-    width: 116px;
-    height: 165px;
-    border-radius: 8px;
+@media screen and (min-width: 768px) {
+    .shopping-list-book-card {
+        max-width: 704px;
+        height: 213px;
+    }
 }
 
+@media screen and (min-width: 1440px) {
+    .shopping-list-book-card {
+        max-width: 996px;
+        }
+}
+
+.shopping-list-img {
+    width: 100%;
+    max-width: 100px;
+    height: 142px
+}
+
+@media screen and (min-width: 768px) {
+    .shopping-list-img {
+        width: 116px;
+        height: 165px;
+        border-radius: 8px;
+    }
+}
+
+.shopping-list-book-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 14px;
+    height: 100%;
+}
+
+.shopping-list-book-name {
+    color: #111;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.125;
+    letter-spacing: -0.64px;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+}
+
+
+.shopping-list-book-genre {
+    color: #B4AFAF;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.166;
+    letter-spacing: 0.36px;
+}
+
+.shopping-list-book-deskription {
+    overflow: hidden;
+    color: #111;
+    text-overflow: ellipsis;
+    white-space:  nowrap;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.28;
+    letter-spacing: -0.56px;
+}
+
+.shopping-list-author {
+    margin-top: auto;
+}
+.shopping-list-icons svg {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.shopping-list-company-icons {
+    position: absolute;
+    bottom: 24px;
+    right: 24px;
+}
 
