--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="../index.html" class="nav-link">HOME</a>
+        <a href="../index.html" class="nav-link home-link">HOME</a>
       </li>
       <li class="nav-item">
         <a href="../shopping-list.html" class="nav-link"
