--- a/src/css/books-by-cat.css
+++ b/src/css/books-by-cat.css
@@ -17,6 +17,7 @@
 
 .book-cover {
   margin-bottom: 14px;
+  height: 485px;
   border-radius: 8px;
   box-shadow: 0 4px 4px;
 }
@@ -113,6 +114,10 @@
     margin-bottom: 0;
     width: calc((100% - 50px) / 3);
   }
+
+  .book-cover{
+    height: 316px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -123,5 +128,9 @@
 
   .book-card {
     width: calc((100% - 96px) / 5);
+  }
+
+  .book-cover {
+    height: 285px;
   }
 }
