--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,9 +1,27 @@
-<button id="modalBtn" class="button">Click here</button>
+<button id="openModalBtn" class="button">Click here</button>
 
-<div id="popUp" class="modal">
-  <div class="modal-content">
-    <span class="closeBtn">&times;</span>
-    <p>Information about book</p>
-    <button type="submit">ADD TO SHOPPING LIST</button>
-  </div>
-</div>
+    <div id="popUp" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <!-- <div class="about-book">
+                <div class="cover-book"></div>
+                <div class="book-info">
+                    <div class="title">
+                    <h1 class="modal-title">Hello beautiful</h1>
+                    <h3 class="modal-author">Ann Napolitano</h3>
+                </div>
+                <p class="book-descr"></p>
+                <ul class="sale-platforms-list">
+                    <li class="platform"></li>
+                    <li class="platform"></li>
+                    <li class="platform"></li>
+                    
+                </ul>
+            </div> -->
+
+            </div>
+            <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
+            <button class="remove-button" type="submit">REMOVE FROM THE SHOPPING LIST</button>
+
+        </div>        
+    </div>
