--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -1,5 +1,5 @@
 body{
-    font-style: Arial, Helvetica, sans-serif;
+    font-family: "DM Sans", sans-serif;
     font-size: 21px;
     line-height: 1.8;
 }
@@ -8,13 +8,13 @@ body{
     padding: 1em 2em;
     color: #ffffff;
     border: 1px solid black;
-    border-radius: 10%;
+    border-radius: 10px;
 }
 .button:hover{
     background-color: aqua;
 }
 .modal{
-    /* display: none; */
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -25,22 +25,63 @@ body{
     background-color: rgb(0,1,0,0.2);
 }
 .modal-content{
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     margin: 20% auto;
     padding: 20px;
-    width: 70%;
-    box-shadow: 0 5px 8px rgb(0,0,0,0.2), 0 7px 20px rgb(0,0,0,0.17);
+    width: 579px;
+    height: 465px;
+    border: 2px solid #111111;
+    border-radius: 18px;
+    
 }
 
-.closeBtn{
-    color: #ccc;
-    float: right;
-    font-size: 30px;
-}
-.closeBtn:hover,
-.closeBtn:focus{
+.close{
     color: #000;
-    text-decoration: none;
-    cursor: pointer;
+    float: right;
+    font-size: 28px;
+}
 
+.close:hover,
+.close:focus {
+  color:#4F2EE8;
+  text-decoration: none;
+  cursor: pointer;
+}
+.about-book{
+    display: -webkit-box;
+}
+
+.modal-title{
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: bold;
+}
+.modal-author{
+    font-size: 14px;
+    line-height: 18px;
+    font-style: italic;
+    color: #B4AFAF;
+}
+.book-descr{
+    font-size: 14px;
+    line-height: 18px;
+    font-style: normal;
+
+}
+.sale-platforms-list{
+    
+}
+.add-button, .remove-button{
+    background-color: #ffffff;
+    padding: 20px;
+    width: 499px;
+    color: #111111;
+    font-size: 18px;
+    line-height: 24px;
+    border: 2px solid #4F2EE8;
+    border-radius: 40px;
+
+}
+.remove-button{
+    display: none;
 }
