--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -3,7 +3,7 @@
     <div id="popUp" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <!-- <div class="about-book">
+            <!-- <div class="book-card">
                 <div class="cover-book"></div>
                 <div class="book-info">
                     <div class="title">
