--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,4 +1,4 @@
-<!-- <button id="modalBtn" class="button">Click here</button>
+<button id="modalBtn" class="button">Click here</button>
 
 <div id="popUp" class="modal">
   <div class="modal-content">
@@ -6,4 +6,4 @@
     <p>Information about book</p>
     <button type="submit">ADD TO SHOPPING LIST</button>
   </div>
-</div> -->
+</div>
