getSelectedBookId moved to API

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,4 +1,4 @@
-<button id="openModalBtn" class="button">Click here</button>
+<!-- <button id="openModalBtn" class="button">Click here</button> -->
 
     <div id="popUp" class="modal">
         <div class="modal-content">
