--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./pop-up.css');
-
+@import url('./pagination.css');
 @import url('./query-and-markup.css');
 @import url('./books-by-cat.css');
 
