--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -3,8 +3,8 @@
     <div id="popUp" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <!-- <div class="book-card">
-                <div class="cover-book"></div>
+            <div class="book-card">
+                <!-- <div class="cover-book"></div>
                 <div class="book-info">
                     <div class="title">
                     <h1 class="modal-title">Hello beautiful</h1>
@@ -16,8 +16,8 @@
                     <li class="platform"></li>
                     <li class="platform"></li>
                     
-                </ul>
-            </div> -->
+                </ul> -->
+            </div>
 
             </div>
             <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
