category css finished

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,8 @@
   --main-cl: #4f2ee8;
   --text-cl: #111111;
   --secondary-text-cl: #b4afaf;
+  --active-cl: #EAC645;
+  
 
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
