--- a/src/css/books-by-cat.css
+++ b/src/css/books-by-cat.css
@@ -1,9 +1,49 @@
+.loader {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 32px;
+  height: 32px;
+  position: relative;
+  border-radius: 50%;
+  color: var(--active-cl);
+  animation: fill 1s ease-in infinite alternate;
+}
+
+.loader::before,
+.loader::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  left: 48px;
+  top: 0;
+  animation: fill 0.9s ease-in infinite alternate;
+}
+
+.loader::after {
+  left: auto;
+  right: 48px;
+  animation-duration: 1.1s;
+}
+
+@keyframes fill {
+  0% {
+    box-shadow: 0 0 0 2px inset
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px inset
+  }
+}
+
 .category-title {
   margin-bottom: 40px;
   font-weight: 700;
   font-size: 32px;
   line-height: 1.2;
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;
   text-align: left;
 }
 
@@ -11,15 +51,17 @@
   margin-bottom: 40px;
 }
 
+.img-link {
+  width: 200px;
+}
+
 .book-card {
   margin-bottom: 40px;
 }
 
 .book-cover {
-  margin-bottom: 14px;
-  height: 485px;
+  width: 100%;
   border-radius: 8px;
-  box-shadow: 0 4px 4px;
 }
 
 .book-title {
@@ -27,14 +69,14 @@
   font-size: 16px;
   line-height: 1.1;
   text-align: left;
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;  
 }
 
 .author-name {
   font-size: 12px;
   line-height: 1.2;
   font-style: italic;
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;
   color: var(--secondary-text-cl);
 }
 
@@ -51,55 +93,53 @@
   color: var(--secondary-text-cl);
 }
 
+.best-list {
+  display: flex;
+  flex-direction: row;
+}
+
 .overlay-bg {
-  position: absolute;
-  padding: 26px 48px;
-  bottom: 50;
+  position: absolute;  
+  bottom: 0;
+  left: 0;
+
+  padding: 26px 0;
   width: 100%;
   height: 70px;
-  background: #eac645;
+  background: var(--active-cl);
   border-radius: 0px 0px 8px 8px;
-  opacity: 0;
-
-  opacity: 0;
-  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  transform: translateY(70px);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay {
   position: relative;
   overflow: hidden;
+
+  margin-bottom: 14px;
 }
 
 .overlay-text {
   font-weight: 500;
   font-size: 14px;
-  line-height: 18px;
-  line-height: calc(14 / 18);
+  line-height: 1.3;
   letter-spacing: -0.04em;
+  text-align: center;
   text-transform: uppercase;
-  color: var(--dark-header-bg-color);
-
-  opacity: 0;
-  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-cl);
 }
 
-.book-card-wrapper:hover .overlay-bg {
-  opacity: 100%;
-}
-
-.book-card-wrapper:hover .overlay-text {
-  opacity: 100%;
-}
-
-.book-card-wrapper:hover {
-  border-radius: 8px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-
-  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1);
+.book-card:hover .overlay-bg,
+.book-card:focus .overlay-bg {
+  transform: translateY(0);
 }
 
 @media screen and (min-width: 768px) {
+  .category-title{
+    font-size: 48px;
+  }
+
   .books {
     margin-bottom: 100px;
   }
@@ -129,8 +169,7 @@
   .book-card {
     width: calc((100% - 96px) / 5);
   }
-
-  .book-cover {
-    height: 285px;
+  .loader {
+    margin-top: 150px;
   }
 }
