--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -69,6 +69,12 @@ body{
 
 }
 .sale-platforms-list{
+    display: flex;
+    
+}
+
+.book-id{
+    display: flex;
     
 }
 .add-button, .remove-button{
