--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -5,11 +5,10 @@ ul {
 .container-support {
     position: relative;
 
-    
     border-radius: 16px;
-    width: 335px;
+    min-width: 335px;
     height: 352px;
-    background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 100%) 
+    background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 105%) 
 
 }
 
@@ -21,7 +20,7 @@ ul {
 
 @media screen and (min-width: 1440px) {
     .container-support {
-        width: 356px; 
+        min-width: 356px; 
     }
 }
 
@@ -68,14 +67,14 @@ ul {
 
 .list-support {
     overflow-y: scroll;
-    height: 188px;
+    height: 206px;
     padding: 0 0 0 40px;
     margin: 0;
 }
 
 @media screen and (min-width: 768px){
     .list-support {
-        height: 292px;
+        height: 322px;
     }
 }
 
