--- a/src/css/books-by-cat.css
+++ b/src/css/books-by-cat.css
@@ -38,6 +38,22 @@
   }
 }
 
+.best-gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  justify-content: flex-end;
+}
+
+.bestsellers-cat-title {
+  margin-bottom: 18px;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  line-height: 1.3;
+  text-transform: uppercase;
+  color: var(--secondary-text-cl);
+}
+
 .category-title {
   margin-bottom: 40px;
   font-weight: 700;
@@ -55,16 +71,13 @@
   width: 200px;
 }
 
-.book-card {
-  margin-bottom: 40px;
-}
-
 .book-cover {
   width: 100%;
   border-radius: 8px;
 }
 
 .book-title {
+  margin-top: 40px;
   margin-bottom: 4px;
   font-size: 16px;
   line-height: 1.1;
@@ -96,6 +109,7 @@
 .best-list {
   display: flex;
   flex-direction: row;
+  margin-bottom: 8px;
 }
 
 .overlay-bg {
@@ -130,14 +144,18 @@
   color: var(--text-cl);
 }
 
-.book-card:hover .overlay-bg,
-.book-card:focus .overlay-bg {
+.img-link:hover .overlay-bg,
+.img-link:focus .overlay-bg {
   transform: translateY(0);
 }
 
 @media screen and (min-width: 768px) {
   .category-title{
     font-size: 48px;
+  }
+
+  .best-list {
+  margin-bottom: 20px;
   }
 
   .books {
@@ -150,9 +168,13 @@
     gap: 40px 25px;
   }
 
-  .book-card {
+  .card {
     margin-bottom: 0;
     width: calc((100% - 50px) / 3);
+  }
+
+  .bestseller-card {
+    width: 100%;
   }
 
   .book-cover{
@@ -166,9 +188,19 @@
     column-gap: 24px;
   }
 
-  .book-card {
-    width: calc((100% - 96px) / 5);
+  .best-list {
+    margin-bottom: 32px;
   }
+ 
+  .card {
+    width: calc((100% - 96px) / 5);
+  } 
+
+  .bestseller-card {
+    width: 100%;
+  }
+
+
   .loader {
     margin-top: 150px;
   }
