--- a/src/css/books-by-cat.css
+++ b/src/css/books-by-cat.css
@@ -67,6 +67,17 @@
   margin-bottom: 40px;
 }
 
+.book-card {
+  width: 335px;
+  height: 535px;
+  margin-bottom: 40px;
+}
+
+.book-card img {
+  width: 100%;
+  height: 485px;
+}
+
 .img-link {
   width: 200px;
 }
@@ -77,7 +88,6 @@
 }
 
 .book-title {
-  margin-top: 40px;
   margin-bottom: 4px;
   font-size: 16px;
   line-height: 1.1;
@@ -106,9 +116,11 @@
   color: var(--secondary-text-cl);
 }
 
-.best-list {
+.books-list {
   display: flex;
-  flex-direction: row;
+}
+
+.best-list{
   margin-bottom: 8px;
 }
 
@@ -154,6 +166,11 @@
     font-size: 48px;
   }
 
+  .books-list {
+  justify-content: space-between;
+  gap: 25px;
+  }
+
   .best-list {
   margin-bottom: 20px;
   }
@@ -168,10 +185,15 @@
     gap: 40px 25px;
   }
 
-  .card {
-    margin-bottom: 0;
-    width: calc((100% - 50px) / 3);
+  .book-card {
+    width: 218px;
+    height: 336px;
   }
+
+  .book-card img {
+    width: 100%;
+    height: 316px;
+  }  
 
   .bestseller-card {
     width: 100%;
@@ -191,17 +213,46 @@
   .best-list {
     margin-bottom: 32px;
   }
- 
-  .card {
-    width: calc((100% - 96px) / 5);
-  } 
+
+  .book-card {
+    width: 180px;
+    height: 306px;
+    margin-bottom: 0;
+  }
+
+  .book-card img {
+    width: 100%;
+    height: 256px;
+  }
 
   .bestseller-card {
     width: 100%;
   }
 
-
   .loader {
     margin-top: 150px;
   }
+}
+
+.btn-see-more {
+  display: block;
+  margin-left: auto;
+  padding: 14px 28px;
+  border: 2px solid var(--main-cl);
+  border-radius: 40px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.3;
+  background-color: transparent;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: var(--text-cl);
+  transition: background-color 300ms linear, color 300ms linear;
+  cursor: pointer;
+}
+
+.btn-see-more:hover,
+.btn-see-more:focus {
+  background-color: var(--main-cl);
+  color: #fff;
 }
