--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
   <a href="../index.html" class="logo-link"
     ><svg class="" width="109" height="28">
       <use href="../img/svg/icons.svg#logo-icon"></use></svg
@@ -11,7 +11,7 @@
       </li>
       <li class="nav-item">
         <a href="../shopping-list.html" class="nav-link"
-          >SHOPPING LIST<svg class="" width="20" height="20">
+          >SHOPPING LIST<svg class="shopper-icon" width="20" height="20">
             <use href="../img/svg/icons.svg#shopper-icon"></use></svg
         ></a>
       </li>
