--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="../index.html" class="logo-link"
+  <a href="./index.html" class="logo-link"
     ><svg class="" width="109" height="28">
       <use href="./img/svg/icons.svg#logo-icon"></use></svg
   ></a>
