--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,12 +7,12 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="../index.html" class="nav-link home-link">HOME</a>
+        <a href="./index.html" class="nav-link home-link">HOME</a>
       </li>
       <li class="nav-item">
-        <a href="../shopping-list.html" class="nav-link"
+        <a href="./shopping-list.html" class="nav-link"
           >SHOPPING LIST<svg class="" width="20" height="20">
-            <use href="../img/svg/icons.svg#shopper-icon"></use></svg
+            <use href="./img/svg/icons.svg#shopper-icon"></use></svg
         ></a>
       </li>
     </ul>
