якось ось так, це ще не все

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,50 +1,50 @@
 <footer>
-  <h1 class="item">Our Team likes</h1>
-  <ul>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Scrum Master</p>
+  <h1 class="">Our Team likes</h1>
+  <ul class="list-team">
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Scrum Master</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>TeamLead</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">TeamLead</p>
     </li>
-    <li>
-      <img src="../img/team/yuliia -dubyniuk.jpg" alt="Yuliia Dubyniuk" width="100">
-      <h2 class="card-set-team">Yuliia Dubyniuk</h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="../img/team/yuliia-dubyniuk.jpg" alt="Yuliia Dubyniuk" width="200" class="card">
+      <h2 class="fact-team">Yuliia Dubyniuk</h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="Victoria Kozlova" width="100">
-      <h2 class="card-set-team">Victoria Kozlova</h2>
-      <p>Frontend developer</p>
+    <li class="item item-mi">
+      <img src="../img/team/victoria-kozlova.jpg" alt="Victoria Kozlova" width="135" height="200" class="card card-mi">
+      <h2 class="fact-team">Victoria Kozlova</h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
-    <li>
-      <img src="" alt="" width="100">
-      <h2 class="card-set-team"></h2>
-      <p>Frontend developer</p>
+    <li class="item">
+      <img src="" alt="" width="200" class="card">
+      <h2 class="fact-team"></h2>
+      <p class="fact-descr">Frontend developer</p>
     </li>
   </ul>
 </footer>
