--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,12 +10,13 @@
 
 @import url('./dark-mode.css');
 
+@import url('./footer.css');
 :root {
   --main-cl: #4f2ee8;
   --text-cl: #111111;
   --secondary-text-cl: #b4afaf;
   --active-cl: #EAC645;
-  
+
 
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
