--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,5 @@
-
 <header class="header" id="header">
   <a href="./index.html" class="logo-link"
-
     ><svg class="" width="109" height="28">
       <use href="./img/svg/icons.svg#logo-icon"></use></svg
   ></a>
@@ -12,11 +10,9 @@
         <a href="./index.html" class="nav-link home-link">HOME</a>
       </li>
       <li class="nav-item">
-
         <a href="./shopping-list.html" class="nav-link"
-          >SHOPPING LIST<svg class="" width="20" height="20">
+          >SHOPPING LIST<svg class="shoper-icon" width="20" height="20">
             <use href="./img/svg/icons.svg#shopper-icon"></use></svg
-
         ></a>
       </li>
     </ul>
