--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -3,16 +3,7 @@ body{
     font-size: 21px;
     line-height: 1.8;
 }
-.button{
-    background-color: coral;
-    padding: 1em 2em;
-    color: #ffffff;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-.button:hover{
-    background-color: aqua;
-}
+
 .modal{
     display: none;
     position: fixed;
@@ -21,23 +12,24 @@ body{
     top: 0;
     height: 100%;
     width: 100%;
-    overflow: auto;
     background-color: rgb(0,1,0,0.2);
     
 }
+
 .modal-content{
     position: absolute;
     background-color: #ffffff;
     box-sizing: border-box;
-    margin: 30% auto;
+    margin: 0 auto;
     padding: 24px 40px;
     width: 335px;
-    height: 762px;
+    height: auto;
     left: 250px;
-    /* top: 50%;
+    top: 0;
     left: 50%;
-	transform: translate(-50%, -500%);  */
-    bottom: -130px;
+    right: 50%;
+	/* transform: translate(-50%, -500%);  */
+    /* bottom: -130px; */
     border: 2px solid #111111;
     border-radius: 18px;
     
@@ -58,16 +50,37 @@ body{
 
 
 .close{
-    color: #000;
-    float: right;
-    font-size: 28px;
+position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  border: none;
+
+  display: flex;
+  
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  
+
+  background-color: var(--cornflower);
+ 
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+}
+.close-icon {
+    
 }
 
-.close:hover,
-.close:focus {
-  color:#4F2EE8;
-  text-decoration: none;
-  cursor: pointer;
+.close-icon:hover,
+.close-icon:focus {
+    fill: #4F2EE8 ;
+  
+}
+
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 @media screen and (min-width: 768px) { 
     .book-card-mw{
@@ -102,7 +115,10 @@ body{
     }
   }
   
-  
+ 
+.thumb{
+    max-width: 260px;
+}  
 .modal-title{
     font-size: 24px;
     line-height: 28px;
@@ -122,19 +138,19 @@ body{
 }
 .sale-platforms-list{
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
     max-height: 200px;
     
 }
 
 .book-info{
-    
-        margin-bottom: 80px;
         max-width: 350px;
         display: flex;
         flex-direction: column;
         /* align-items: center; */
-        gap: 14px;
+        gap: 20px;
 }
 
 .add-button, .remove-button{
