--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,12 +1,21 @@
     <div id="popUp" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="book-card-mw" >
+            <button class="close" type="button">
+                <svg class="close-icon" width="20" height="20">
+                  <use href="./img/svg/icons.svg#icon-close-x"></use>
+                </svg>
+            </button>
+            <!-- <span class="close">&times;</span> -->
+            <div class="modal-body">
+                <div class="book-card-mw" >
             
+                </div>
+                <div>
+                    <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
+                    <button class="remove-button" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
+                </div>   
             </div>
-            <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
-            <button class="remove-button" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
-            </div>           
+                    
 
         </div>        
     </div>
