--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,50 +1,114 @@
-<footer>
-  <h1 class="">Our Team likes</h1>
+<footer class="footer">
+    <h2 class="">Our Team likes</h2>
   <ul class="list-team">
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+       <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/hanna-bodnarovska.jpg" alt="Hanna Bodnarovska" width="200" class="card">
+       <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like to read fiction</p>
+       </div>
+    </div>
+      <h3 class="fact-team">Hanna Bodnarovska</h3>
       <p class="fact-descr">Scrum Master</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/kryvskyi-stepan.jpg" alt="Kryvskyi Stepan" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like the autobiographical and historical genres</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Kryvskyi Stepan</h3>
       <p class="fact-descr">TeamLead</p>
+      </a>
     </li>
     <li class="item">
+      <a class="container-item" href="#">
+      <div class="overlay-item">
       <img src="../img/team/yuliia-dubyniuk.jpg" alt="Yuliia Dubyniuk" width="200" class="card">
-      <h2 class="fact-team">Yuliia Dubyniuk</h2>
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like the detective genre</p>
+      </div>
+    </div>
+      <h3 class="fact-team">Yuliia Dubyniuk</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="">
+      <div class="overlay-item">
+      <img src="../img/team/mykhailo-mamin.jpg" alt="Mykhailo Mamin" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like to read fiction and detective stories</p>
+      </div>
+    </div>
+      <h3 class="fact-team">Mykhailo Mamin</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item item-mi">
-      <img src="../img/team/victoria-kozlova.jpg" alt="Victoria Kozlova" width="135" height="200" class="card card-mi">
-      <h2 class="fact-team">Victoria Kozlova</h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/oleksandra-tkach.jpg" alt="Oleksandra Tkach" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like fiction</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Oleksandra Tkach</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/yehor-hlavatyi.jpg" alt="Yehor Hlavatyi" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like to read manga</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Yehor Hlavatyi</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/victoria-kozlova.jpg" alt="Victoria Kozlova" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like fantasy, detective and mystery</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Victoria Kozlova</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/vladislav-babitckyu.jpg" alt="Vladislav Babitckyu" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-bg-item">I like fantasy</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Vladislav Babitckyu</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
     <li class="item">
-      <img src="" alt="" width="200" class="card">
-      <h2 class="fact-team"></h2>
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/dima-bodartinov.jpg" alt="Dima Bodartinov" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">I like fantasy and adventure</p>
+      </div>
+      </div>
+      <h3 class="fact-team">Dima Bodartinov</h3>
       <p class="fact-descr">Frontend developer</p>
+      </a>
     </li>
-  </ul>
+   </ul>
+
 </footer>
