--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,16 @@
+.footer{
+  display: none;
+}
 
+@media only screen and (min-width: 768px) {
+.footer{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  padding: 14px 24px;
+  border-radius: 8px 8px 0px 0px;
+  border: 1.5px solid #111;
+}
 .fact-team {
     font-style: normal;
 
@@ -10,7 +22,6 @@
     font-weight: bold;
 }
 
-
 .fact-descr {
   font-size: 10px;
   line-height: 1.5;
@@ -21,10 +32,9 @@
 .list-team {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 9px;
 }
 .item {
-  width: 200px;
   background-color: var(--color-white);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -32,15 +42,43 @@
   margin-bottom: 8px;
 }
 .card {
+  width: 266px;
   background-color: var(--color-white);
   box-sizing: border-box;
 }
-.card-mi {
-  box-sizing: content-box;
-  width: 135px;
-  height: 200px;
+
+.overlay-bg-item {
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 26px 0;
+  width: 100%;
+  height: 100%;
+  background: var(--active-cl);
+  border-radius: 8px 8px 0px 0px;
+  transform: translateY(100%);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.item-mi{
-  width: auto;
+.overlay-item{
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 14px;
+}
+
+.overlay-text-item {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.04em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--text-cl);
+}
+
+.container-item:hover .overlay-bg-item,
+.container-item:focus .overlay-bg-item {
+   transform: translateY(0);
+}
 }
