--- a/src/css/query-and-markup.css
+++ b/src/css/query-and-markup.css
@@ -39,3 +39,40 @@
   }
 }
 
+.overlay-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  padding: 26px 0;
+  width: 100%;
+  height: 70px;
+  background: var(--active-cl);
+  border-radius: 0px 0px 8px 8px;
+
+  transform: translateY(70px);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+
+  margin-bottom: 14px;
+}
+
+.overlay-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.04em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--text-cl);
+}
+
+.img-link:hover .overlay-bg,
+.img-link:focus .overlay-bg {
+  transform: translateY(0);
+}
+
