--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header" id="header">
   <a href="./index.html" class="logo-link"
-    ><svg class="" width="109" height="28">
+    ><svg class="logo-icon" width="109" height="28">
       <use href="./img/svg/icons.svg#logo-icon"></use></svg
   ></a>
 
