--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,4 +32,9 @@
 
     <span class="slider round"></span>
   </label>
+  <button class="menu-toggle-btn" type="button">
+    <svg class="menu-toggle-icon" width="28" height="28">
+      <use href="./img/svg/icons.svg#icon-align-left"></use>
+    </svg>
+  </button>
 </header>
