--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,26 @@
 <footer class="footer">
-    <h2 class="">Our Team likes</h2>
+    <h2 class="">Reading books makes people smarter. Our team loves books. Be smart! Join us! 😉</h2>
   <ul class="list-team">
     <li class="item">
        <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/hanna-bodnarovska.jpg" alt="Hanna Bodnarovska" width="200" class="card">
+      <img src="../img/team/stepan.jpg" alt="Stepan Kryvskyi" width="200" class="card">
        <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like to read fiction</p>
+        <p class="overlay-text-item">Autobiographical and historical genres</p>
        </div>
     </div>
+      <h3 class="fact-team"></h3>
+      <p class="fact-descr">TeamLead</p>
+      </a>
+    </li>
+    <li class="item">
+      <a class="container-item" href="#">
+      <div class="overlay-item">
+      <img src="../img/team/hanna.jpg" alt="Hanna Bodnarovska" width="200" class="card">
+      <div class="overlay-bg-item">
+        <p class="overlay-text-item">Fantasy</p>
+      </div>
+      </div>
       <h3 class="fact-team">Hanna Bodnarovska</h3>
       <p class="fact-descr">Scrum Master</p>
       </a>
@@ -16,21 +28,9 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/kryvskyi-stepan.jpg" alt="Kryvskyi Stepan" width="200" class="card">
+      <img src="../img/team/yuliia.jpg" alt="Yuliia Dubyniuk" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like the autobiographical and historical genres</p>
-      </div>
-      </div>
-      <h3 class="fact-team">Kryvskyi Stepan</h3>
-      <p class="fact-descr">TeamLead</p>
-      </a>
-    </li>
-    <li class="item">
-      <a class="container-item" href="#">
-      <div class="overlay-item">
-      <img src="../img/team/yuliia-dubyniuk.jpg" alt="Yuliia Dubyniuk" width="200" class="card">
-      <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like the detective genre</p>
+        <p class="overlay-text-item">Detective genre</p>
       </div>
     </div>
       <h3 class="fact-team">Yuliia Dubyniuk</h3>
@@ -40,9 +40,9 @@
     <li class="item">
       <a class="container-item" href="">
       <div class="overlay-item">
-      <img src="../img/team/mykhailo-mamin.jpg" alt="Mykhailo Mamin" width="200" class="card">
+      <img src="../img/team/mychailo.jpg" alt="Mykhailo Mamin" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like to read fiction and detective stories</p>
+        <p class="overlay-text-item">Fiction and detective stories</p>
       </div>
     </div>
       <h3 class="fact-team">Mykhailo Mamin</h3>
@@ -52,9 +52,9 @@
     <li class="item item-mi">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/oleksandra-tkach.jpg" alt="Oleksandra Tkach" width="200" class="card">
+      <img src="../img/team/oleksandra.jpg" alt="Oleksandra Tkach" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like fiction</p>
+        <p class="overlay-text-item">Fiction</p>
       </div>
       </div>
       <h3 class="fact-team">Oleksandra Tkach</h3>
@@ -64,9 +64,9 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/yehor-hlavatyi.jpg" alt="Yehor Hlavatyi" width="200" class="card">
+      <img src="../img/team/yegor.jpg" alt="Yehor Hlavatyi" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like to read manga</p>
+        <p class="overlay-text-item">Manga</p>
       </div>
       </div>
       <h3 class="fact-team">Yehor Hlavatyi</h3>
@@ -76,9 +76,9 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/victoria-kozlova.jpg" alt="Victoria Kozlova" width="200" class="card">
+      <img src="../img/team/viktoriia.jpg" alt="Victoria Kozlova" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like fantasy, detective and mystery</p>
+        <p class="overlay-text-item">Fantasy, detective and mystery</p>
       </div>
       </div>
       <h3 class="fact-team">Victoria Kozlova</h3>
@@ -88,9 +88,9 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/vladislav-babitckyu.jpg" alt="Vladislav Babitckyu" width="200" class="card">
+      <img src="../img/team/vladyslav.jpg" alt="Vladislav Babitckyu" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-bg-item">I like fantasy</p>
+        <p class="overlay-bg-item">Fantasy</p>
       </div>
       </div>
       <h3 class="fact-team">Vladislav Babitckyu</h3>
@@ -100,9 +100,9 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/dima-bodartinov.jpg" alt="Dima Bodartinov" width="200" class="card">
+      <img src="../img/team/dmytro.jpg" alt="Dima Bodartinov" width="200" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-text-item">I like fantasy and adventure</p>
+        <p class="overlay-text-item">Fantasy and adventure</p>
       </div>
       </div>
       <h3 class="fact-team">Dima Bodartinov</h3>
