--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,7 @@
         <p class="overlay-text-item">Autobiographical and historical genres</p>
        </div>
     </div>
-      <h3 class="fact-team"></h3>
+      <h3 class="fact-team">Stepan Kryvskyi</h3>
       <p class="fact-descr">TeamLead</p>
       </a>
     </li>
