--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -4,50 +4,10 @@ body{
     line-height: 1.8;
 }
 
-/* .modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(0,1,0,0.2);
-    
-}
 
-.modal-content{
-    position: absolute;
-    background-color: #ffffff;
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 24px 40px;
-    width: 335px;
-    height: auto;
-    left: 250px;
-    top: 0;
-    left: 50%;
-    right: 50%;
-	/* transform: translate(-50%, -500%);  */
-    /* bottom: -130px; */
-    /* border: 2px solid #111111;
-    border-radius: 18px;
-    
+.modal-open{
+    overflow: hidden;
 }
-@media screen and  (min-width: 768px){
-    .modal-content{
-        background-color: #ffffff;
-        box-sizing: border-box;
-        margin: 20% auto;
-        padding: 40px;
-        width: 579px;
-        height: 465px;
-        border: 2px solid #111111;
-        border-radius: 18px;
-        
-    } 
-} */ */
-/* ============================================================================================ */
 .modal {
     position: fixed;
     top: 0;
@@ -102,20 +62,16 @@ position: absolute;
   right: 12px;
   padding: 0;
   border: none;
-
   display: flex;
-  
   justify-content: center;
   width: 24px;
   height: 24px;
-  background-color: var(--cornflower);
- 
-  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  background-color: #ffffff;
 }
 @media only screen and (min-width: 768px){
     .close{
     top: 24px;
-    right: 24px;
+    right: 15px;
     }
 }
 
