--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -4,71 +4,76 @@ body{
     line-height: 1.8;
 }
 
-.modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(0,1,0,0.2);
-    
+.modal-open{
+    overflow: hidden;
 }
 
-.modal-content{
-    position: absolute;
+.modal {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,1,0,0.2);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease all;
+    z-index: 1;
+    }
+  
+  .modal.active,
+  .modal-content.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  .modal-content.active {
+      transform: translate(-50%, -50%);
+      transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  .modal-content {
+    position: fixed;
     background-color: #ffffff;
     box-sizing: border-box;
     margin: 0 auto;
     padding: 24px 40px;
     width: 335px;
-    height: auto;
-    left: 250px;
-    top: 0;
+    height: 100hv;
+    top: 50%;
     left: 50%;
-    right: 50%;
-	/* transform: translate(-50%, -500%);  */
-    /* bottom: -130px; */
-    border: 2px solid #111111;
+    transform: translate(-50%, -500%); 
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s all cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 30;
+     border: 2px solid #111111;
     border-radius: 18px;
-    
-}
-@media screen and  (min-width: 768px){
-    .modal-content{
-        background-color: #ffffff;
-        box-sizing: border-box;
-        margin: 20% auto;
-        padding: 40px;
-        width: 579px;
-        height: 465px;
-        border: 2px solid #111111;
-        border-radius: 18px;
-        
+  }
+  @media only screen and (min-width: 768px) {
+    .modal-content {
+      width: 579px;
+      height: 465px;
+      padding: 40px;
+    }
     } 
-}
-
 
 .close{
 position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 12px;
+  right: 12px;
   padding: 0;
   border: none;
-
   display: flex;
-  
   justify-content: center;
   width: 24px;
   height: 24px;
-  
-
-  background-color: var(--cornflower);
- 
-  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  background-color: #ffffff;
 }
-.close-icon {
-    
+@media only screen and (min-width: 768px){
+    .close{
+    top: 24px;
+    right: 15px;
+    }
 }
 
 .close-icon:hover,
@@ -89,9 +94,7 @@ position: absolute;
         
     } 
 }
-.book-id{
-    
-}
+
 @media screen and (min-width: 768px) {
     .book-id{
         display: flex;
@@ -106,6 +109,7 @@ position: absolute;
     width: 287px;
     border: 1px solid transparent;
     border-radius: 8px;
+    margin-bottom: 14px;
   }
 
   @media screen and (min-width: 768px) {
@@ -140,16 +144,13 @@ position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    max-height: 200px;
-    
+    gap: 20px;    
 }
 
 .book-info{
         max-width: 350px;
         display: flex;
         flex-direction: column;
-        /* align-items: center; */
         gap: 20px;
 }
 
