pop-up some fixed

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -11,7 +11,7 @@
                 </div>
                 <div>
                     <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
-                    <button class="remove-button" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
+                    <button class="remove-button display" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
                 </div>   
             </div>
                     
