--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,9 @@
 .footer{
   display: none;
 }
-
+.scroll-container{
+  margin-bottom: 14px;
+}
 @media only screen and (min-width: 768px) {
 .footer{
   display: block;
